# uc_catalog

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  test.json  vcpkg.json
.github/workflows/: LocalTesting.yml  MainDistributionPipeline.yml
scripts/: uc-script.sh
src/: CMakeLists.txt  uc_api.cpp  uc_catalog_extension.cpp  uc_utils.cpp
src/include/: uc_api.hpp  uc_catalog_extension.hpp  uc_utils.hpp
src/include/storage/: uc_catalog.hpp  uc_catalog_set.hpp  uc_schema_entry.hpp  uc_schema_set.hpp  uc_table_entry.hpp  uc_table_set.hpp  uc_transaction.hpp  uc_transaction_manager.hpp
src/storage/: CMakeLists.txt  uc_catalog.cpp  uc_catalog_set.cpp  uc_clear_cache.cpp  uc_schema_entry.cpp  uc_schema_set.cpp  uc_table_entry.cpp  uc_table_set.cpp  uc_transaction.cpp  uc_transaction_manager.cpp
test/: README.md
test/sql/: uc_catalog.test  uc_cert.test
